--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,9 +2,25 @@
     box-sizing: border-box;
     width: 24px;
     height: 24px;
-    margin: 0 0 0 18px;
     background-image: url('../../../images/Edit-Button.svg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    transition: opacity .2s ease-in;
+    position: absolute;
+    top: 15px;
+    right: -42px;
+}
+
+.profile__edit-button:hover {
+    opacity: .6;
+}
+
+@media screen and (max-width: 450px) {
+    .profile__edit-button {
+        width: 18px;
+        height: 18px;
+        top: 8px;
+        right: -28px;
+    }
 }
