--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,8 @@
 .page {
+    position: relative;
     background-color: black;
     margin: 0;
     padding: 0;
+    font-family: 'Inter';
+    font-style: normal;
 }
