--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,4 +6,25 @@
     background-image: url('../../../images/Add-Button-Sign.svg');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 22px;
+    transition: opacity .2s ease-in;
+}
+
+.profile__add-button:hover {
+    opacity: .6;
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .profile__add-button {
+        margin: 31px 0 0;
+        width: 282px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .profile__add-button {
+        background-size: 16px;
+    }
 }
