--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,7 +1,29 @@
 .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 336px;
-    align-items: baseline;
-    align-content: center;
+    position: relative;
+    max-width: 450px;
+}
+
+@media screen and (max-width: 900px) {
+    .profile__info {
+        max-width: 400px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .profile__info {
+        max-width: 350px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .profile__info {
+        max-width: 340px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .profile__info {
+        max-width: 220px;
+    }
 }
