--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,9 +1,17 @@
 .profile__name {
     color: white;
-    font-family: 'Inter';
-    font-style: normal;
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 450px) {
+    .profile__name {
+        font-size: 27px;
+        line-height: 33px;
+    }
 }
