--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,7 +1,21 @@
 .profile {
-    width: 100%;
     margin: 40px 0 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 917px) {
+    .profile {
+        margin: 40px 19px 0;
+
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .profile {
+        flex-direction: column;
+        align-items: center;
+
+    }
 }
