--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   width: 100%;
   margin: 45px 0 0;
-  color: white;
+  color: #fff;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
