--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,9 +1,1 @@
-.popup__form {
-  padding: 34px 36px;
-}
-
-@media screen and (max-width: 450px) {
-  .popup__form {
-    padding: 25px 22px;
-  }
-}
+.popup__form {}
