--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,6 @@
 .popup__input {
   margin: 0 0 44px;
-  padding-bottom: 13px;
+  padding: 0 0 8px;
   width: 100%;
   box-sizing: border-box;
   outline: none;
