--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -2,7 +2,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  color: white;
+  color: #fff;
   margin: 7px 0 0;
   text-overflow: ellipsis;
   white-space: nowrap;
