--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,7 +2,9 @@
   width: 150px;
   height: 50px;
   box-sizing: border-box;
-  border: 2px solid white;
+  padding: 0;
+  background-color: transparent;
+  border: 2px solid #fff;
   background-image: url('../../../images/Add-Button-Sign.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -11,6 +13,7 @@
 }
 
 .profile__add-button:hover {
+  cursor: pointer;
   opacity: .6;
 }
 
