--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   width: 24px;
   height: 24px;
+  padding: 0;
+  border-style: none;
+  background-color: transparent;
   background-image: url('../../../images/Edit-Button.svg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,6 +16,7 @@
 }
 
 .profile__edit-button:hover {
+  cursor: pointer;
   opacity: .6;
 }
 
