--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,12 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
-  display: none;
+
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity .3s ease-in;
+
+  display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1;
