--- a/blocks/element/__heart-button/element__heart-button.css
+++ b/blocks/element/__heart-button/element__heart-button.css
@@ -2,4 +2,17 @@
       padding: 0;
       border-style: none;
       background-color: transparent;
+
+      background-image: url('../../../images/Heart-Icon.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      width: 22px;
+      height: 19px;
+      transition: opacity .2s ease-in;
+    }
+
+    .element__heart-button:hover {
+      cursor: pointer;
+      opacity: .5;
     }
