--- a/blocks/element/__delete-button/element__delete-button.css
+++ b/blocks/element/__delete-button/element__delete-button.css
@@ -5,4 +5,18 @@
     padding: 0;
     border-style: none;
     background-color: transparent;
+
+    background-image: url('../../../images/Trash-icon.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 18px;
+    height: 19px;
+    transition: opacity .2s ease-in;
+
+}
+
+.element__delete-button:hover {
+    cursor: pointer;
+    opacity: .5;
 }
