--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -4,7 +4,7 @@
   position: relative;
   background-color: #fff;
   width: 430px;
-  height: 330px;
+  /* height: 330px; */
   border-radius: 10px;
   cursor: default;
 }
